# venturi

./: CMakeLists.txt  Makefile  README.md
app/: Application.cpp  Application.hpp  CMakeLists.txt  Config.hpp  Logger.hpp  main.cpp
src/: CMakeLists.txt
src/adapters/: CMakeLists.txt
src/adapters/http/: BeastHttpServer.cpp  BeastHttpServer.hpp  HttpSession.cpp  HttpSession.hpp
src/adapters/storage/: FileSystemRepository.cpp  FileSystemRepository.hpp
src/core/: CMakeLists.txt
src/core/entities/: MediaInfo.hpp
src/core/ports/: IHttpServer.hpp  IMediaRepository.hpp
src/core/services/: MediaService.cpp  MediaService.hpp
